fixed alignment of arrows

--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,15 @@ h3 {
 .location:hover { background-color: #d7ebf4; } /* mouse over */
 
 .arrow {
+  display: inline-block;
   box-sizing: border-box;
+  padding: 15px;
   float: right;
 }
 
 .content {
+  display: inline-block;
   box-sizing: border-box;
-  width: 90%;
+
 
 }
